# AMP

./: .gitignore  .gitmodules  README.md  README_zh.md  format_all_scripts.sh  format_single_scripts.sh  pyproject.toml  setup.py
amp/: __init__.py  bc.md  module_patcher.py
amp/common/: __init__.py  deepspeed.py  inferencer.py  mindie_helper.py  patch_transformers.py  prof.py  prof_pd.py  test_audio.m4a  transformers.py  utils.py
amp/evaluator/: cogagent-chat-hf.yaml  evaluator.py  inferencer.py  trainer.py
amp/models/: README.md  __init__.py  baichuan_m1_14b.py  bc5_14b.py  bc5_7b_omini.py  characterglm_6b.py  chatglm.py  chatglm2_32k.py  codegeex2-6b.py  codegeex2_6b.py  cogagent2_9b.py  cogagent_chat_hf.py  cogvlm.py  cogvlm2_llama3_chat_19b.py  cogvlm_chat_hf.py  deepseek_coder.py  deepseek_coder_6_7b_instruct.py  deepspeed.py  llama.py  megrez_3b_omni.py  mergrezo.py  mistral.py  ops.py  qwen.py  qwen2.py  qwen2_moe.py  qwen2_vl.py  rotary_kernel.py  yi.py
amp/models/common/: dummy_flash_attn.py  index_input.py  original_fa.py
amp/supported_models/cogvlm2-llama3-chat-19B/: README.md  modeling_cogvlm.py  util.py  visual.py
examples/: test-cogvlm2.py  test_flash_attn.py
examples/dummy_transformers/: model.py
examples/gradio_template/: llm.py  llm_mindie.py
examples/test_flash_attn/: dummy_fa.py  test.py
kernel_meta/: buildPidInfo.json
models/: llama.py
supported_models/chatglm2-6b-32k/: inference.py
supported_models/tmp/: inference.py
