[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AMP"
version = "0.0.3"
description = "ascend model patcher"
readme = "README.md"
authors = [{ name = "guozr", email = "guozr1997@hotmail.com" }]
urls = { "Homepage" = "https://github.com/starmountain1997/AMP" }
requires-python = ">=3.8"
dependencies = ["torch_npu", "torch", "transformers", "numpy<2", "loguru"]


[project.optional-dependencies]
deepspeed = ["deepspeed"]

[tool.setuptools]
packages = ["amp","amp.common","amp.models"]
