[tool.poetry]
name = "amp"
version = "0.0.1"
description = "any model patcher"
authors = ["guozr <guozr1997@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "2.1.0"
transformers = "^4.47.1"
numpy = "<2"
loguru = "^0.7.3"
astor = "^0.8.1"
prettytable = "^3.12.0"
hydra-core = "^1.3.2"
pydantic = "^2.10.4"
accelerate = "^1.2.1"
torchvision = "0.16.0"
torchaudio = "2.1.0"
peft = "^0.14.0"
apex = "^0.9.10.dev0"
pyramid = "1.5"

[tool.poetry.group.ascend.dependencies]
torch_npu = "2.1.0"
openmind = "0.9.1"


[tool.poetry.group.multimodal.dependencies]
pillow = "^11.0.0"
timm = "^1.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
